# groqmate

./: .coverage  .coveragerc  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION.md  LICENSE  README.md  brainstorming.md  main.py  pyproject.toml  requirements.txt
src/: main.py  ui.py
src/groqmate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/groqmate/core/: config.py  models.py  providers.py  state.py  tutor.py
src/groqmate/interfaces/cli/: app.py  settings_screen.py  style.tcss  widgets.py
tests/: conftest.py  test_app.py  test_models.py  test_providers.py  test_state.py  test_tutor.py  test_widgets.py
