[project]
name = "groqmate"
version = "0.1.0"
description = "An interactive CLI learning coach powered by Groq"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Groqmate"}
]
dependencies = [
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "textual>=0.70.0",
    "rich>=13.0.0"
]

[project.scripts]
groqmate = "groqmate.interfaces.cli.app:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
